backend/test_log_final_10.txt

> Task :compileJava
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\entity\Content.java:53: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private Long viewCount = 0L;
                 ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\entity\Content.java:60: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private List<ContentHashtag> hashtags = new ArrayList<>();
                                 ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\entity\Content.java:80: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private Long ratingCount = 0L;
                 ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\entity\Content.java:81: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private Long ratingSum = 0L;
                 ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\entity\Content.java:82: warning: @Builder will ignore the initializing expression entirely. If you want the initializing expression to serve as default, add @Builder.Default. If it is not supposed to be settable during building, make the field final.
    private BigDecimal averageRating = BigDecimal.ZERO;
                       ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:85: error: cannot find symbol
        content.setSummary(dto.getSummary());
               ^
  symbol:   method setSummary(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:87: error: cannot find symbol
        content.setBodyHtml(HtmlSanitizerUtil.sanitize(dto.getBodyHtml()));
               ^
  symbol:   method setBodyHtml(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:88: error: cannot find symbol
        content.setBodyText(dto.getBodyText());
               ^
  symbol:   method setBodyText(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:91: error: incompatible types: String cannot be converted to ContentStatus
        content.setStatus(dto.getStatus());
                                       ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:112: error: cannot find symbol
            content.setSummary(dto.getSummary());
                   ^
  symbol:   method setSummary(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:114: error: cannot find symbol
            content.setBodyHtml(HtmlSanitizerUtil.sanitize(dto.getBodyHtml()));
                   ^
  symbol:   method setBodyHtml(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:116: error: cannot find symbol
            content.setBodyText(dto.getBodyText());
                   ^
  symbol:   method setBodyText(String)
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\service\ContentService.java:118: error: incompatible types: String cannot be converted to ContentStatus
            content.setStatus(dto.getStatus());
                                           ^
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\content\ContentResponseDto.java:29: error: cannot find symbol
                .summary(content.getSummary())
                                ^
  symbol:   method getSummary()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\content\ContentResponseDto.java:30: error: cannot find symbol
                .thumbnailUrl(content.getThumbnailFile() != null ? content.getThumbnailFile().getFilePath() : null) // TODO:
                                     ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\content\ContentResponseDto.java:30: error: cannot find symbol
                .thumbnailUrl(content.getThumbnailFile() != null ? content.getThumbnailFile().getFilePath() : null) // TODO:
                                                                          ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\content\ContentDetailResponseDto.java:32: error: cannot find symbol
                .bodyHtml(content.getBodyHtml())
                                 ^
  symbol:   method getBodyHtml()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:30: error: cannot find symbol
                    .summary(content.getSummary())
                                    ^
  symbol:   method getSummary()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:31: error: cannot find symbol
                    .thumbnailUrl(content.getThumbnailFile() != null ? "/uploads/" + content.getThumbnailFile().getStoredName() : null)
                                         ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:31: error: cannot find symbol
                    .thumbnailUrl(content.getThumbnailFile() != null ? "/uploads/" + content.getThumbnailFile().getStoredName() : null)
                                                                                            ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:63: error: cannot find symbol
                    .summary(content.getSummary())
                                    ^
  symbol:   method getSummary()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:64: error: cannot find symbol
                    .bodyHtml(content.getBodyHtml())
                                     ^
  symbol:   method getBodyHtml()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:65: error: cannot find symbol
                    .thumbnailUrl(content.getThumbnailFile() != null ? "/uploads/" + content.getThumbnailFile().getStoredName() : null)
                                         ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
D:\berodu\SORIN\project\Newsletter\backend\src\main\java\com\kz\magazine\dto\ContentDto.java:65: error: cannot find symbol
                    .thumbnailUrl(content.getThumbnailFile() != null ? "/uploads/" + content.getThumbnailFile().getStoredName() : null)
                                                                                            ^
  symbol:   method getThumbnailFile()
  location: variable content of type Content
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
19 errors
5 warnings

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 6s
1 actionable task: 1 executed
